--- a/styles/main.scss
+++ b/styles/main.scss
@@ -19,6 +19,7 @@ $end: rgb(12, 129, 1);
     display: flex;
     justify-content: center;
     align-items: center;
+    cursor:none;
 }
 
 .board {
